--- a/style.css
+++ b/style.css
@@ -1,6 +1,6 @@
 *{
-    margin: 0;
     padding: 0;
+    text-decoration: none;
     list-style: none;
     font-family: "Google Sans Regular", sans-serif;
     box-sizing: border-box;
@@ -8,6 +8,7 @@
 
 
 body {
+    margin: 0;
     background: #fefefe;
 }
 header {
@@ -67,7 +68,7 @@ header {
         cursor: pointer;
     }
     .hamburger .line {
-        width: 3+px;
+        width: 30px;
         height: 3px;
         background: #fefefe;
         margin: 6px;
@@ -93,7 +94,6 @@ header {
         margin: 80px auto 0 auto;
         text-align: center;
         transition: 0.5s;
-        opacity: 0;
     }
     .nav-bar.active ul{
         opacity: 1;
@@ -101,7 +101,6 @@ header {
     }
     .nav-bar ul li a {
         margin-bottom: 12px;
-        color: red;
-
+        
     }
 }
