--- a/style.css
+++ b/style.css
@@ -10,6 +10,7 @@
 body {
     margin: 0;
     background: #fefefe;
+  
 }
 header {
     width: 100%;
@@ -20,6 +21,41 @@ header {
     justify-content: space-between;
     padding: 0 100px;
 }
+/*Container*/
+.main-page{
+    display: grid;
+    grid-template-rows: 60px auto 60px;
+    grid-template-columns: 1fr;
+    grid-template-areas: 'left' 'right' 'footer';
+    height: 100vh;
+    /*Styling*/
+    padding: 100px;
+    gap: 250px;
+}
+
+@media (min-width: 480px) {
+    .main-page {
+        grid-template-rows: 60px auto 60px;
+        grid-template-columns: 450px auto;
+        grid-template-areas: 
+        'left left left'
+        'right right right'
+        'footer footer footer';
+        
+    }
+}
+
+
+.footer{
+    background: #11101b;
+    position: fixed;
+    left: 0;
+    bottom: 0;
+    width: 100%;
+    height: 5%;
+    text-align: center;
+}
+
 .logo {
     font-size: 28px;
     font-weight: bold;
