--- a/style.css
+++ b/style.css
@@ -21,40 +21,6 @@ header {
     justify-content: space-between;
     padding: 0 100px;
 }
-/*Container*/
-.main-page{
-    display: grid;
-    grid-template-rows: 60px auto 60px;
-    grid-template-columns: 1fr;
-    grid-template-areas: 'left' 'right' 'footer';
-    height: 100vh;
-    /*Styling*/
-    padding: 100px;
-    gap: 250px;
-}
-
-@media (min-width: 480px) {
-    .main-page {
-        grid-template-rows: 60px auto 60px;
-        grid-template-columns: 450px auto;
-        grid-template-areas: 
-        'left left left'
-        'right right right'
-        'footer footer footer';
-        
-    }
-}
-
-
-.footer{
-    background: #11101b;
-    position: fixed;
-    left: 0;
-    bottom: 0;
-    width: 100%;
-    height: 5%;
-    text-align: center;
-}
 
 .logo {
     font-size: 28px;
@@ -139,4 +105,21 @@ header {
         margin-bottom: 12px;
         
     }
+}
+
+/* Social Links Container */
+.social-links {
+    display: flex;
+    gap: 20px; 
+}
+  
+/* Style for the links */
+.social-links a {
+    text-decoration: none; 
+    transition: opacity 0.3s; 
+}
+  
+  /* Hover effect for the links */
+.social-links a:hover {
+    opacity: 0.7; 
 }
