--- a/style.css
+++ b/style.css
@@ -12,6 +12,14 @@ body {
     background: #fefefe;
   
 }
+
+img {
+    display: block;
+    max-inline-size: 100%;
+    padding: 0px 20px 0px 20px;
+    
+
+}
 header {
     width: 100%;
     height: 80px;
