--- a/style.css
+++ b/style.css
@@ -16,6 +16,7 @@ body {
 img {
     display: block;
     max-inline-size: 100%;
+    height: auto;
 
 }
 header {
@@ -110,6 +111,25 @@ header {
     .nav-bar ul li a {
         margin-bottom: 12px;
         
+    }
+}
+
+.columns {
+    float: left;
+    width: 50%;
+    padding: 12px;
+    min-height: 300px;
+}
+
+.rows:after {
+    content: "";
+    display: table;
+    clear: both;
+}
+
+@media screen and (max-width: 768px) {
+    .columns {
+        width: 100%;
     }
 }
 
