--- a/style.css
+++ b/style.css
@@ -181,25 +181,56 @@ header {
     opacity: 0.7; 
 }
 
-.project-block {
-
+.card-div {
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    padding: 20px;
 }
 
-.project-img-link {
+/*Project-Cards*/
+.card {
+    display: block;
+    width: 80%; 
+    max-width: 1250px; 
+    background: white;
+    border-radius: 12px;
+    overflow: hidden;
+    box-shadow: 0 4px 10px rgba(0, 0, 0, 0.15);
+    text-decoration: none;
+    color: inherit;
+    transition: transform 0.2s ease, box-shadow 0.2s ease;
+    
+    
+  }
 
-}
+  .card:hover {
+    transform: translateY(-4px);
+    box-shadow: 0 8px 20px rgba(0, 0, 0, 0.2);
+  }
 
-.project-text {
+  .card img {
+    object-fit: cover;
+    width: 100%;
+    height: 600px;
+    display: block;
+  }
 
-}
+  .card-content {
+    padding: 22px;
+  }
 
-.project-title {
+  .card-title {
+    font-size: 1.2em;
+    margin: 0 0 8px;
+  }
 
-}
-
-.project-summary {
-
-}
+  .card-description {
+    font-size: 0.95em;
+    color: #555;
+    width: 80%; 
+    max-width: 800px;
+  }
 
 .columns {
     float: left;
@@ -219,4 +250,12 @@ header {
     .columns {
         width: 100%;
     }
+}
+
+.center-div {
+    display: flex; 
+    justify-content: center; 
+    align-items: center;
+    margin-left: auto;
+    margin-right: auto;
 }
