--- a/style.css
+++ b/style.css
@@ -258,4 +258,13 @@ header {
     align-items: center;
     margin-left: auto;
     margin-right: auto;
+    flex-direction: column;
 }
+
+th, td {
+    border-style: none;
+    padding: 16px;
+    width: 200px;
+  
+}
+
