--- a/style.css
+++ b/style.css
@@ -13,7 +13,7 @@ body {
   
 }
 
-img {
+.main img {
     display: block;
     max-inline-size: 100%;
     height: auto;
@@ -192,7 +192,7 @@ header {
 .card {
     display: block;
     width: 100%; 
-    max-width: 1250px; 
+    max-width: 1100px; 
     background: white;
     border-radius: 12px;
     overflow: hidden;
@@ -227,7 +227,7 @@ header {
     font-size: 0.95em;
     color: #555;
     width: 100%; 
-    max-width: 800px;
+    max-width: 1000px;
   }
 
 .columns {
@@ -250,7 +250,7 @@ header {
     }
 }
 
-.center-div {
+.footer {
     display: flex; 
     justify-content: center; 
     align-items: center;
